--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "faker": "^4.1.0",
+    "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
