--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "cytoscape": "^3.12.1",
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
