--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cytoscape": "^3.12.1",
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
